--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./CSS/mobile.css" />
+    <link rel="stylesheet" href="./CSS/tablet.css" />
+    <link rel="stylesheet" href="./CSS/desktop.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="all-nav">
           <a class="header-link logo link" href="./index.html"
@@ -54,7 +57,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="first-section">
         <div class="container">
@@ -159,7 +162,7 @@
         </div>
       </section>
       <section class="section team-section">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="list team-list">
             <li class="team-card">
@@ -416,7 +419,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div>
           <a class="link logo" href="./index.html"
@@ -480,8 +483,8 @@
           </div>
         </form>
       </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button-closer" data-modal-close type="button">
           <svg class="modal-icon-closer" width="8" height="8">
@@ -562,7 +565,7 @@
           <button class="modal-button button" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
