--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
           <ul class="list list-tech">
             <li class="tech-element">
               <img
+                srcset="./images1/img1.jpg 1x, ./images1/img1-2x.jpg 2x"
                 class="img-tech"
                 src="./images1/img1.jpg"
                 alt="Monitor"
@@ -144,6 +145,7 @@
             </li>
             <li class="tech-element">
               <img
+                srcset="./images1/img2.jpg 1x, ./images1/img2-2x.jpg 2x"
                 class="img-tech"
                 src="./images1/img2.jpg"
                 alt="Touchscrin"
@@ -152,6 +154,7 @@
             </li>
             <li class="tech-element">
               <img
+                srcset="./images1/img3.jpg 1x, ./images1/img3-2x.jpg 2x"
                 class="img-tech"
                 src="./images1/img3.jpg"
                 alt="Mobile phone"
@@ -167,6 +170,7 @@
           <ul class="list team-list">
             <li class="team-card">
               <img
+                srcset="./images1/img11.jpg 1x, ./images1/img11-2x.jpg 2x"
                 class="team-img"
                 src="./images1/img11.jpg"
                 alt="photo1"
@@ -217,6 +221,7 @@
             </li>
             <li class="team-card">
               <img
+                srcset="./images1/img22.jpg 1x, ./images1/img22-2x.jpg 2x"
                 class="team-img"
                 src="./images1/img22.jpg"
                 alt="photo2"
@@ -267,6 +272,7 @@
             </li>
             <li class="team-card">
               <img
+                srcset="./images1/img33.jpg 1x, ./images1/img33-2x.jpg 2x"
                 class="team-img"
                 src="./images1/img33.jpg"
                 alt="photo3"
@@ -317,6 +323,7 @@
             </li>
             <li class="team-card">
               <img
+                srcset="./images1/img44.jpg 1x, ./images1/img44-2x.jpg 2x"
                 class="team-img"
                 src="./images1/img44.jpg"
                 alt="photo4"
