--- a/index.html
+++ b/index.html
@@ -24,40 +24,45 @@
     <link rel="stylesheet" href="./CSS/desktop.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="all-nav">
           <a class="header-link logo link" href="./index.html"
             ><span class="web">Web</span>Studio</a
           >
           <ul class="navigation list">
-            <li class="nav-list">
+            <li class="nav-item">
               <a href="./index.html" class="header-link link current">Studio</a>
             </li>
-            <li class="nav-list">
+            <li class="nav-item">
               <a href="./portfolio.html" class="header-link link">Portfolio</a>
             </li>
-            <li class="nav-list">
+            <li class="nav-item">
               <a href="" class="header-link link">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
-          <ul class="auth-nav list">
+          <ul class="address-list list">
             <li>
-              <a href="mailto:info@devstudio.com" class="link auth-link"
+              <a href="mailto:info@devstudio.com" class="link address-link"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+110001111111" class="link auth-link"
+              <a href="tel:+110001111111" class="link address-link"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
         </address>
+        <button class="humburger-button button" type="button">
+          <svg width="32" height="22">
+            <use href="./images1/symbol-defs.svg#icon-humburger"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
     <main>
       <section class="first-section">
         <div class="container">
