--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,9 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./CSS/mobile.css" />
+    <link rel="stylesheet" href="./CSS/tablet.css" />
+    <link rel="stylesheet" href="./CSS/desktop.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,32 +27,32 @@
     <header class="header">
       <div class="container header-container">
         <nav class="all-nav">
-          <a class="logo link" href="./index.html"
+          <a class="header-link logo link" href="./index.html"
             ><span class="web">Web</span>Studio</a
           >
           <ul class="navigation list">
-            <li class="nav-list">
+            <li class="nav-item">
               <a href="./index.html" class="header-link link">Studio</a>
             </li>
-            <li class="nav-list">
+            <li class="nav-item">
               <a href="./portfolio.html" class="header-link link current"
                 >Portfolio</a
               >
             </li>
-            <li class="nav-list">
+            <li class="nav-item">
               <a href="" class="header-link link">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
-          <ul class="auth-nav list">
+          <ul class="address-list list">
             <li>
-              <a href="mailto:info@devstudio.com" class="link auth-link"
+              <a href="mailto:info@devstudio.com" class="link address-link"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+110001111111" class="link auth-link"
+              <a href="tel:+110001111111" class="link address-link"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -130,6 +133,26 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
+                  <picture>
+                    <source
+                      srcset="./images1/card3.jpg 1x, ./images1/card3-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card3-tablet.jpg    1x,
+                        ./images1/card3-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card3-mobile.jpg    1x,
+                        ./images1/card3-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                  </picture>
                   <img
                     class="img-portfolio"
                     src="./images1/card3.jpg"
