--- a/index.html
+++ b/index.html
@@ -56,11 +56,81 @@
             </li>
           </ul>
         </address>
-        <button class="humburger-button button" type="button">
+        <button class="humburger-button js-open-menu button" type="button">
           <svg width="32" height="22">
-            <use href="./images1/symbol-defs.svg#icon-humburger"></use>
+            <use href="./images1/symbol-defs.svg#icon-hamburger"></use>
           </svg>
         </button>
+      </div>
+      <div class="mobile-menu js-menu-container is-hidden">
+        <button class="mobile-button-closer js-close-menu button" type="button">
+          <svg width="8" height="8">
+            <use href="./images1/symbol-defs.svg#icon-closer"></use>
+          </svg>
+        </button>
+        <div class="container mobile-container">
+          <nav class="mobile-menu-all-nav">
+            <ul class="mobile-menu-list list">
+              <li class="mobile-menu-item">
+                <a href="./index.html" class="mobile-menu-link link">Studio</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a href="./portfolio.html" class="mobile-menu-link link"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mobile-menu-item">
+                <a href="" class="mobile-menu-link link current">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mobile-menu-address">
+            <ul class="mobile-menu-address-list list">
+              <li>
+                <a href="tel:+110001111111" class="link mobile-menu-phone"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="link mobile-menu-email"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="list social-list">
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg width="24" height="24" class="social-icon">
+                    <use href="./images1/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg width="24" height="24" class="social-icon">
+                    <use href="./images1/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg width="24" height="24" class="social-icon">
+                    <use href="./images1/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg width="24" height="24" class="social-icon">
+                    <use href="./images1/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </header>
     <main>
@@ -579,5 +649,6 @@
       </div>
     </div> -->
     <script src="./js/modal.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
