--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu js-menu-container is-hidden">
+      <div class="mobile-menu container js-menu-container">
         <button class="mobile-button-closer js-close-menu button" type="button">
           <svg width="8" height="8">
             <use href="./images1/symbol-defs.svg#icon-closer"></use>
           </svg>
         </button>
-        <div class="container mobile-container">
+
+        <div class="mobile-container">
           <nav class="mobile-menu-all-nav">
             <ul class="mobile-menu-list list">
               <li class="mobile-menu-item">
