--- a/index.html
+++ b/index.html
@@ -511,53 +511,56 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
-        <div>
-          <a class="link logo" href="./index.html"
-            ><span class="web">Web</span>Studio</a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="companies">
-          <p class="companies-text">Social media</p>
-          <ul class="list social-list">
-            <li class="social-item">
-              <a class="social-link link" href="">
-                <svg width="24" height="24" class="social-icon">
-                  <use href="./images1/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link link" href="">
-                <svg width="24" height="24" class="social-icon">
-                  <use href="./images1/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link link" href="">
-                <svg width="24" height="24" class="social-icon">
-                  <use href="./images1/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link link" href="">
-                <svg width="24" height="24" class="social-icon">
-                  <use href="./images1/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-wrap">
+          <div class="footer-logo-text">
+            <a class="link logo" href="./index.html"
+              ><span class="web">Web</span>Studio</a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="companies">
+            <p class="companies-text">Social media</p>
+            <ul class="list social-list">
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg width="24" height="24" class="social-icon">
+                    <use href="./images1/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg width="24" height="24" class="social-icon">
+                    <use href="./images1/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg width="24" height="24" class="social-icon">
+                    <use href="./images1/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg width="24" height="24" class="social-icon">
+                    <use href="./images1/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <form class="footer-form">
-          <p class="subscribe-text">Subscribe</p>
-          <div class="footer-button-wrap">
+          <div class="footer-subscribe-input">
+            <p class="subscribe-text">Subscribe</p>
+
             <input
               class="subscribe-input"
               name="user-email"
@@ -565,18 +568,18 @@
               placeholder="E-mail"
               required
             />
-
-            <button class="subscribe-button button" type="submit">
-              Subscribe
-              <svg class="subscribe-icon" width="24" height="20">
-                <use href="./images1/symbol-defs.svg#icon-send"></use>
-              </svg>
-            </button>
           </div>
+
+          <button class="subscribe-button button" type="submit">
+            Subscribe
+            <svg class="subscribe-icon" width="24" height="20">
+              <use href="./images1/symbol-defs.svg#icon-send"></use>
+            </svg>
+          </button>
         </form>
       </div>
-    </footer> -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    </footer>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button-closer" data-modal-close type="button">
           <svg class="modal-icon-closer" width="8" height="8">
@@ -657,7 +660,7 @@
           <button class="modal-button button" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
     <script defer src="./js/mobile-menu.js"></script>
   </body>
