--- a/portfolio.html
+++ b/portfolio.html
@@ -174,12 +174,33 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card1.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images1/card1.jpg 1x, ./images1/card1-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card1-tablet.jpg    1x,
+                        ./images1/card1-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card1-mobile.jpg    1x,
+                        ./images1/card1-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card1.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
+                  </picture>
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -197,12 +218,33 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card2.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images1/card2.jpg 1x, ./images1/card2-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card2-tablet.jpg    1x,
+                        ./images1/card2-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card2-mobile.jpg    1x,
+                        ./images1/card2-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card2.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
+                  </picture>
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -237,13 +279,14 @@
                       "
                       media="(max-width: 767px)"
                     />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card3.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
                   </picture>
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card3.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -259,12 +302,33 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card4.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images1/card4.jpg 1x, ./images1/card4-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card4-tablet.jpg    1x,
+                        ./images1/card4-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card4-mobile.jpg    1x,
+                        ./images1/card4-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card4.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
+                  </picture>
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -280,12 +344,33 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card5.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images1/card5.jpg 1x, ./images1/card5-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card5-tablet.jpg    1x,
+                        ./images1/card5-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card5-mobile.jpg    1x,
+                        ./images1/card5-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card5.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
+                  </picture>
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -301,12 +386,33 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card6.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images1/card6.jpg 1x, ./images1/card6-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card6-tablet.jpg    1x,
+                        ./images1/card6-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card6-mobile.jpg    1x,
+                        ./images1/card6-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card6.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
+                  </picture>
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -322,12 +428,33 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card7.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images1/card7.jpg 1x, ./images1/card7-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card7-tablet.jpg    1x,
+                        ./images1/card7-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card7-mobile.jpg    1x,
+                        ./images1/card7-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card7.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
+                  </picture>
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -343,12 +470,33 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card8.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images1/card8.jpg 1x, ./images1/card8-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card8-tablet.jpg    1x,
+                        ./images1/card8-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card8-mobile.jpg    1x,
+                        ./images1/card8-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card8.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
+                  </picture>
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -364,12 +512,33 @@
             <li class="card">
               <a class="card-link link" href="">
                 <div class="card-wrap">
-                  <img
-                    class="img-portfolio"
-                    src="./images1/card9.jpg"
-                    alt="Screens"
-                    width="360"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images1/card9.jpg 1x, ./images1/card9-2x.jpg 2x"
+                      media="(max-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card9-tablet.jpg    1x,
+                        ./images1/card9-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images1/card9-mobile.jpg    1x,
+                        ./images1/card9-mobile-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="img-portfolio"
+                      src="./images1/card9.jpg"
+                      alt="Screens"
+                      width="360"
+                    />
+                  </picture>
+
                   <p class="card-hidden-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
