--- a/portfolio.html
+++ b/portfolio.html
@@ -195,9 +195,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card1.jpg"
+                      src="./images1/card1-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
@@ -239,9 +240,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card2.jpg"
+                      src="./images1/card2-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
@@ -281,9 +283,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card3.jpg"
+                      src="./images1/card3-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
@@ -323,9 +326,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card4.jpg"
+                      src="./images1/card4-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
@@ -365,9 +369,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card5.jpg"
+                      src="./images1/card5-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
@@ -407,9 +412,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card6.jpg"
+                      src="./images1/card6-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
@@ -449,9 +455,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card7.jpg"
+                      src="./images1/card7-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
@@ -491,9 +498,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card8.jpg"
+                      src="./images1/card8-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
@@ -533,9 +541,10 @@
                     />
                     <img
                       class="img-portfolio"
-                      src="./images1/card9.jpg"
+                      src="./images1/card9-mobile.jpg"
                       alt="Screens"
-                      width="360"
+                      width="396"
+                      height="280"
                     />
                   </picture>
 
