--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <nav class="mobile-menu-all-nav">
               <ul class="mobile-menu-list list">
                 <li class="mobile-menu-item">
-                  <a href="./index.html" class="mobile-menu-link link"
+                  <a href="./index.html" class="mobile-menu-link current link"
                     >Studio</a
                   >
                 </li>
@@ -87,7 +87,7 @@
                   >
                 </li>
                 <li class="mobile-menu-item">
-                  <a href="" class="mobile-menu-link link current">Contacts</a>
+                  <a href="" class="mobile-menu-link link">Contacts</a>
                 </li>
               </ul>
             </nav>
@@ -652,9 +652,11 @@
               value="true"
               required
             />
-            <label class="modal-label modal-label-checkbox" for="acception"
-              >I accept the terms and conditions of the
-              <a class="modal-link" href=""> Privacy Policy</a></label
+            <label class="modal-label modal-label-checkbox" for="acception">
+              <span>
+                I accept the terms and conditions of the
+                <a class="modal-link" href=""> Privacy Policy</a>
+              </span></label
             >
           </div>
           <button class="modal-button button" type="submit">Send</button>
