--- a/portfolio.html
+++ b/portfolio.html
@@ -177,7 +177,7 @@
                   <picture>
                     <source
                       srcset="./images1/card1.jpg 1x, ./images1/card1-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
@@ -222,7 +222,7 @@
                   <picture>
                     <source
                       srcset="./images1/card2.jpg 1x, ./images1/card2-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
@@ -265,7 +265,7 @@
                   <picture>
                     <source
                       srcset="./images1/card3.jpg 1x, ./images1/card3-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
@@ -308,7 +308,7 @@
                   <picture>
                     <source
                       srcset="./images1/card4.jpg 1x, ./images1/card4-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
@@ -351,7 +351,7 @@
                   <picture>
                     <source
                       srcset="./images1/card5.jpg 1x, ./images1/card5-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
@@ -394,7 +394,7 @@
                   <picture>
                     <source
                       srcset="./images1/card6.jpg 1x, ./images1/card6-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
@@ -437,7 +437,7 @@
                   <picture>
                     <source
                       srcset="./images1/card7.jpg 1x, ./images1/card7-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
@@ -480,7 +480,7 @@
                   <picture>
                     <source
                       srcset="./images1/card8.jpg 1x, ./images1/card8-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
@@ -523,7 +523,7 @@
                   <picture>
                     <source
                       srcset="./images1/card9.jpg 1x, ./images1/card9-2x.jpg 2x"
-                      media="(max-width: 1200px)"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="
